[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/GenericLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Buttons/ShrinkableButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Level6/Level6.gd" type="Script" id=3]
[ext_resource path="res://Assets/square_missing.png" type="Texture" id=4]
[ext_resource path="res://Buttons/FadingLabel.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Operators/equal.png" type="Texture" id=6]
[ext_resource path="res://Assets/Numbers/2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Numbers/3.png" type="Texture" id=8]
[ext_resource path="res://Assets/Numbers/9.png" type="Texture" id=9]

[node name="Level6" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="ShrinkableButton" parent="." index="5" instance=ExtResource( 2 )]
margin_left = 315.035
margin_top = 251.0
margin_right = 331.035
margin_bottom = 267.0
texture_normal = ExtResource( 7 )
text = ExtResource( 7 )

[node name="FadingLabel" parent="." index="6" instance=ExtResource( 5 )]
margin_left = 169.011
margin_top = 55.6713
margin_right = 897.011
margin_bottom = 80.6713
bbcode_text = "[wave][color=#00FF00]Green symbols[/color][/wave] can grow and shrink with the UP and DOWN keys"
text = "Green symbols can grow and shrink with the UP and DOWN keys"

[node name="FadingLabel2" parent="." index="7" instance=ExtResource( 5 )]
margin_left = 248.471
margin_top = 440.256
margin_right = 976.471
margin_bottom = 465.256
bbcode_enabled = false
bbcode_text = ""
text = "Woah, you did it, incredible"

[node name="TextureRect" type="TextureRect" parent="." index="8"]
margin_left = 223.0
margin_top = 252.0
margin_right = 239.0
margin_bottom = 268.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="." index="9"]
margin_left = 365.072
margin_top = 251.206
margin_right = 381.072
margin_bottom = 267.206
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="." index="10"]
margin_left = 415.076
margin_top = 251.206
margin_right = 431.076
margin_bottom = 267.206
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="." index="11"]
margin_left = 273.0
margin_top = 230.0
margin_right = 289.0
margin_bottom = 246.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
